# llm-ux

./: .gitignore  06e7932c-665c-487f-80e2-b487ad4d2087.jsonl  0a7b200f-0fc7-40e3-aeb0-46ce75c99a72.jsonl  1d437a9e-3673-4ca0-9be1-5d0383cb1bbb.jsonl  3ffa181a-af2e-41b3-9c62-b403d58f59b6.jsonl  422265e5-377b-4810-8048-19d6a7a8eac2.jsonl  45c81241-cbd2-4a7d-a498-769311ca9b78.jsonl  4c6639db-248d-40d7-b2a1-75e6c5e20679.jsonl  56894621-3e28-4070-9479-6771d147378b.jsonl  635c87f3-46dd-4373-b6ab-ae5bb4bc9ed1.jsonl  682c6e74-88db-4caf-a05e-254fd6bf77c3.jsonl  7132123b-b2df-4514-9202-8ff97952f17a.jsonl  9bbd7ba1-a799-4551-9a02-db0d5fd4bd47.jsonl  CLAUDE.md  CLEANUP_PLAN.md  CODING_STANDARDS.md  TODO.md  a5b94fbe-3650-4c6d-bb68-f21bf9b3bfd1.jsonl  acd0fb42-a636-4cb6-9be1-9481c9e70bca.jsonl  c0c09dc8-ff22-4e57-9fcb-eaa3c4f4f7ab.jsonl  cdb7dee8-ad3b-4203-95fd-7f895aa46d3c.jsonl  cefd9fd6-8428-4f7b-bdcd-0f718407ff81.jsonl  d2eee687-8771-4f91-a9c3-4104700354b4.jsonl  d6f8a0ad-b7b3-40e7-9bea-a30a1f997252.jsonl  design-doc-template.md  design-doc.md  e3433c2a-8f3f-418f-9250-e2ca8e52cd73.jsonl  test-living-doc.py  test_websocket.py
backend/: .gitignore  Makefile  llm_ux.db  pyproject.toml  test_db.py  test_integration.py
backend/src/: branching_models.py  database.py  main.py  models.py  repository.py  websocket_models.py
backend/tests/: conftest.py  test_branching.py  test_collaborative_editing.py  test_connection_manager.py  test_conversation_api.py  test_coverage_gaps.py  test_editing_edge_cases.py  test_final_coverage.py  test_get_messages.py  test_list_conversations.py  (+3 more)
(+40 files in other folders)
