[tool.poetry]
name = "llm-ux-backend"
version = "0.1.0"
description = "Backend for collaborative chat & knowledge system"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
httpx = "^0.25.0"
python-socketio = "^5.10.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
black = "^23.11.0"
ruff = "^0.1.5"
hypothesis = "^6.91.0"
mutmut = "^2.4.3"
httpx = "^0.25.0"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100 --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"

# Tox configuration would go here if needed

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "C4", "PT", "SIM", "RET"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"